--- a/index.html
+++ b/index.html
@@ -2,15 +2,66 @@
 <html lang="en">
 
 <head>
+    <!-- Set site property -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Css & Js Bootstrap -->
+    <link href="./wwwroot/css/bootstrap.min.css" rel="stylesheet">
+    <script src="./wwwroot/js/bootstrap.bundle.min.js"></script>
+    <script src="./wwwroot/js/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/c7ab7d62fe.js" crossorigin="anonymous"></script>
+
+    <!-- Css & Js page load progress bar -->
+    <link rel="stylesheet" href="./wwwroot/css/PageLoad.css">
+    <script src="./wwwroot/js/PageLoad.js"></script>
+
+    <!-- Custom css -->
+    <link rel="stylesheet" href="./wwwroot/css/SiteStyle.css">
+
+    <!-- Set Header -->
+    <title>My Portfolio</title>
 </head>
 
 <body>
-    <h1>Test My Portfolio</h1>
-    <h5> --- This is my Suradet port --- </h5>
+
+    <!-- Progress bar -->
+    <div class='progress' id="progress_div">
+        <div class='bar' id='bar1'></div>
+        <div class='percent' id='percent1'></div>
+    </div>
+
+    <!-- web body -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="./wwwroot/img/SomChai.jpg" alt="" width="30" height="35" class="d-inline-block"> $uradet
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">ABOUT ME</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">MY SKILL</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">MY PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">CONTACT ME</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Set progress width -->
+    <input type="hidden" id="progress_width" value="0">
 </body>
 
 </html>
