[create] new page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./wwwroot/css/SiteStyle.css">
 
     <!-- Set Header -->
-    <title>My Portfolio</title>
+    <title>Page Redirect</title>
 </head>
 
 <body>
@@ -32,33 +32,10 @@
         <div class='percent' id='percent1'></div>
     </div>
 
-    <!-- web body -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="./wwwroot/img/SomChai.jpg" alt="" width="30" height="35" class="d-inline-block"> $uradet
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">ABOUT ME</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">MY SKILL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">MY PORTFOLIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">CONTACT ME</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <!-- Redirect -->
+    <script>
+        window.location.href = '/AboutMe.html';
+    </script>
 
     <!-- Set progress width -->
     <input type="hidden" id="progress_width" value="0">
