[create] common file menu and footer

--- a/common/Menu.html
+++ b/common/Menu.html
@@ -9,27 +9,27 @@
 </script>
 
 <!-- Render Menu -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg bg-light" id="MainMenuStyle">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand Font-Menu-Style" href="/index.html">
             <img src="/wwwroot/img/SomChai.jpg" alt="" width="30" height="35" class="d-inline-block"> $uradet
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#MenuNAVBar" aria-controls="MenuNAVBar" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler Hidden-Menu" type="button" data-bs-toggle="collapse" data-bs-target="#MenuNAVBar" aria-controls="MenuNAVBar" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
         <div class="collapse navbar-collapse" id="MenuNAVBar">
             <ul id="NAVMenuList" class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li id="AboutMe" class="nav-item">
-                    <a class="nav-link" href="/index.html">ABOUT ME</a>
+                <li id="AboutMe" class="nav-item Menu-Onover">
+                    <a class="nav-link Font-Menu-Style" href="/index.html">ABOUT ME</a>
                 </li>
-                <li id="MySkill" class="nav-item">
-                    <a class="nav-link" href="/MySkill.html">MY SKILL</a>
+                <li id="MySkill" class="nav-item Menu-Onover">
+                    <a class="nav-link Font-Menu-Style" href="/MySkill.html">MY SKILL</a>
                 </li>
-                <li id="MyPortfolio" class="nav-item">
-                    <a class="nav-link" href="/MyPortfolio.html">MY PORTFOLIO</a>
+                <li id="MyPortfolio" class="nav-item Menu-Onover">
+                    <a class="nav-link Font-Menu-Style" href="/MyPortfolio.html">MY PORTFOLIO</a>
                 </li>
-                <li id="ContactMe" class="nav-item">
-                    <a class="nav-link" href="/ContactMe.html">CONTACT ME</a>
+                <li id="ContactMe" class="nav-item Menu-Onover">
+                    <a class="nav-link Font-Menu-Style" href="/ContactMe.html">CONTACT ME</a>
                 </li>
             </ul>
         </div>
