[edit] page about

--- a/common/Footer.html
+++ b/common/Footer.html
@@ -1,5 +1,6 @@
-<div class="Footer-Section Footer-Section-Style Footer-Section-Text">
+<div class="sticky-bottom Footer-Section Footer-Section-Style Footer-Section-Text">
     <div class="col-sm-12">
         <h6>Alright reserve @ 2022</h6>
+        <br>
     </div>
 </div>
