--- a/index.html
+++ b/index.html
@@ -39,13 +39,40 @@
     <!-- Content -->
     <section class="Section-about">
         <div class="container">
-            <div class="About-Master-Style">
-                <h1>About me</h1>
-                <div class="container">
-                    <p>I'm suradet i'm programmer</p>
+            <div class="row About-Master-Style">
+                <div class="col-sm-4">
+                    <div class="card Card-Content-Top">
+                        <img class="card-img-top" src="./wwwroot/img/BG.jpg" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">John Doe</h4>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card Card-Content-Bottom">
+                        <img class="card-img-top" src="./wwwroot/img/BG.jpg" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">John Doe</h4>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="card Card-Content-Top">
+                        <img class="card-img-top" src="./wwwroot/img/BG.jpg" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">John Doe</h4>
+                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        <br>
     </section>
 
     <!-- Footer -->
