[edit] about page

--- a/index.html
+++ b/index.html
@@ -43,21 +43,28 @@
                 <div class="col-sm-4">
                     <div class="card Card-Content-Top">
                         <div class="card-body">
-                            <h4 class="card-title">John Doe</h4>
-                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                            <p class="card-text">Hello, my name is Suradet Sripradit. I graduated with a bachelor's degree in science and technology. (Information Technology Rajamangala University of Technology Suvarnabhumi)</p>
+                            <hr width="95%">
+                            <p class="card-text">Hello, my name is Suradet Sripradit. I graduated with a bachelor's degree in science and technology. (Information Technology Rajamangala University of Technology Suvarnabhumi)</p>
+                            <hr width="95%">
+                            <p class="card-text">Hello, my name is Suradet Sripradit. I graduated with a bachelor's degree in science and technology. (Information Technology Rajamangala University of Technology Suvarnabhumi)</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card Card-Content-Bottom">
-                        <img class="card-img-top" src="./wwwroot/img/BG.jpg" alt="Card image">
+                        <div class="card-header">
+                            <h3>Suradet Sripradit</h3>
+                        </div>
+                        <div class="card-body">
+                            <img class="card-img-top" src="./wwwroot/img/SomChai.jpg" alt="Card image">
+                        </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card Card-Content-Top">
                         <div class="card-body">
-                            <h4 class="card-title">John Doe</h4>
-                            <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                            <p class="card-text">example text some example text. John Doe is an architect and engineer</p>
                         </div>
                     </div>
                 </div>
