--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <div class="card">
                       <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                          <img src="/wwwroot/img/Profile.jpg" alt="$suradet" class="rounded-circle" width="150">
+                          <img src="./wwwroot/img/Profile.jpg" alt="$suradet" class="rounded-circle" width="150">
                           <div class="mt-3">
                             <h4>Suradet Sripradit</h4>
                             <p class="text-secondary mb-1">Data engineer</p>
